--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,7 @@ img {
     text-transform: uppercase;
     letter-spacing: 3px;
     color: rgba(255, 255, 255, 0.7);
+    margin-top: 25px;
     margin-bottom: 8px;
 }
 
