--- a/css/style.css
+++ b/css/style.css
@@ -1092,8 +1092,8 @@ img {
     .features-carousel-box {
         margin-top: 30px;
         padding-top: 20px;
-        margin-left: 10px;
-        margin-right: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     
     .features-swiper {
@@ -1112,11 +1112,12 @@ img {
         flex-direction: row !important;
         flex-wrap: nowrap !important;
         gap: 12px;
+        padding-left: 5px;
     }
     
     .features-swiper .swiper-slide {
-        flex: 0 0 calc(100vw - 140px) !important;
-        width: calc(100vw - 140px) !important;
+        flex: 0 0 75vw !important;
+        width: 75vw !important;
         scroll-snap-align: center;
     }
     
