--- a/css/style.css
+++ b/css/style.css
@@ -1046,14 +1046,15 @@ img {
         margin-left: 20px;
     }
     
-    /* About section mobile */
+    /* About section mobile - all centered */
     .panel-about .panel-content {
-        padding-left: 15px;
+        padding-left: 60px;
         padding-right: 15px;
+        text-align: center;
     }
     
     .panel-about .section-text {
-        margin-left: 50px;
+        margin: 0 auto;
     }
     
     .panel-about .section-text h2 {
@@ -1073,7 +1074,9 @@ img {
     }
     
     .panel-about .feature-list {
-        margin-left: 50px;
+        display: inline-block;
+        text-align: left;
+        margin: 15px auto;
         max-width: none;
         padding-left: 0;
     }
@@ -1081,12 +1084,12 @@ img {
     .panel-about .feature-list li {
         font-size: 0.9rem;
         padding-left: 25px;
-        margin-bottom: 6px;
+        margin-bottom: 8px;
     }
     
     .panel-about .stats-row {
-        margin-left: 50px;
-        gap: 25px;
+        justify-content: center;
+        gap: 40px;
         margin-top: 20px;
     }
     
