--- a/css/style.css
+++ b/css/style.css
@@ -1048,8 +1048,8 @@ img {
     
     /* About section mobile - centered with nav offset */
     .panel-about .panel-content {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: calc(50px + 3vw);
+        padding-right: 3vw;
         text-align: center;
     }
     
