--- a/css/style.css
+++ b/css/style.css
@@ -1147,6 +1147,7 @@ img {
     .cta-group {
         flex-direction: column;
         align-items: center;
+        gap: 15px;
     }
     
     .btn {
