--- a/css/style.css
+++ b/css/style.css
@@ -930,6 +930,9 @@ img {
     
     .cta-group {
         justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
     }
     
     .features-carousel-box {
