--- a/css/style.css
+++ b/css/style.css
@@ -932,7 +932,7 @@ img {
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        gap: 15px;
+        gap: 25px !important;
     }
     
     .features-carousel-box {
@@ -1150,7 +1150,7 @@ img {
     .cta-group {
         flex-direction: column;
         align-items: center;
-        gap: 15px;
+        gap: 25px !important;
     }
     
     .btn {
