--- a/css/style.css
+++ b/css/style.css
@@ -932,7 +932,10 @@ img {
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        gap: 25px !important;
+    }
+    
+    .cta-group .btn {
+        margin-bottom: 20px;
     }
     
     .features-carousel-box {
